--- a/index.html
+++ b/index.html
@@ -3,29 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Путешествия по России</title>
   </head>
   <body class="root">
     <div class="page">
       <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип" />
+        <img
+          class="header__logo"
+          src="./images/header-logo.svg"
+          alt="Логотип"
+        />
         <ul class="header__lang-links">
-          <li class="header__lang-link header__lang-link_active">Ru</li>
-          <li class="header__lang-link">En</li>
+          <li>
+            <a class="header__lang-link header__lang-link_active" href="#"
+              >Ru</a
+            >
+          </li>
+          <li>
+            <a class="header__lang-link" href="#">En</a>
+          </li>
         </ul>
       </header>
       <main class="content">
         <section class="lead">
-          <div class="lead__title-container">
-            <h1 class="lead__title">Путешествия по России</h1>
-          </div>
-          <div class="lead__subtitle-container">
-            <p class="lead__subtitle">
-              Настоящая страна не в выпусках новостей, а здесь.
-            </p>
-          </div>
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">
+            Настоящая страна не в выпусках новостей, а здесь.
+          </p>
           <img
             class="lead__image"
             src="./images/lead-polka.jpg"
@@ -34,23 +40,19 @@
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-          <div class="intro__title-container">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-          </div>
-          <div class="intro__text-container">
-            <p class="intro__text">
-              По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но
-              только 36% планируют провести отпуск в родной стране. Мол, чего мы
-              тут, дома, не видели? На самом деле, Россия — это целая вселенная
-              с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
-              Путорана. А ещё увидеть все эти красоты можно без миллионов на
-              счету, загранпаспорта и многочасовых перелетов. Как, например,
-              Вера Башмакова — смелая молодая мама, которая взяла в охапку троих
-              детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по
-              родной стране. Мы выбрали и описали некоторые интересные места,
-              достойные вашего отпуска.
-            </p>
-          </div>
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+            36% планируют провести отпуск в родной стране. Мол, чего мы тут,
+            дома, не видели? На самом деле, Россия — это целая вселенная с
+            ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+            Путорана. А ещё увидеть все эти красоты можно без миллионов на
+            счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+            усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+            стране. Мы выбрали и описали некоторые интересные места, достойные
+            вашего отпуска.
+          </p>
           <ul class="intro__list-container">
             <li class="intro__list">
               Часовых поясов <span class="intro__span-accent">11</span>
@@ -71,7 +73,7 @@
             </li>
           </ul>
         </section>
-        <section class="photo-grid">
+        <section class="photo-grid" aria-label="Галлерея.">
           <img
             class="photo-grid__image"
             src="./images/photo-grid-train.jpg"
@@ -87,7 +89,11 @@
             src="./images/photo-grid-tuman.jpg"
             alt="Поле."
           />
-          <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Лес" />
+          <img
+            class="photo-grid__image"
+            src="./images/photo-grid-sochi.jpg"
+            alt="Лес"
+          />
           <img
             class="photo-grid__image"
             src="./images/photo-grid-arisa.jpg"
@@ -133,8 +139,10 @@
           <div class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
-              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+              <p class="place__url-heading">url</p>
+              <a href="http://park-kosa.ru" class="place__link" target="_blank"
+                >park-kosa.ru</a
+              >
             </div>
             <img
               class="place__image"
@@ -167,6 +175,7 @@
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 class="place__link"
+                target="_blank"
                 >National Geographic</a
               >
             </div>
@@ -201,6 +210,7 @@
               <a
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
                 class="place__link"
+                target="_blank"
                 >YouTube</a
               >
             </div>
@@ -232,7 +242,10 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="https://vk.com/baikalmile" class="place__link"
+              <a
+                href="https://vk.com/baikalmile"
+                class="place__link"
+                target="_blank"
                 >https://vk.com/baikalmile</a
               >
             </div>
@@ -262,7 +275,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="http://vodlozero.ru" class="place__link"
+              <a href="http://vodlozero.ru" class="place__link" target="_blank"
                 >http://vodlozero.ru/</a
               >
             </div>
@@ -292,13 +305,14 @@
           <a
             class="cover__link"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            target="_blank"
           >
             <div class="cover__container">
               <div class="cover__text-block">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">
-                  По мотивам учебной темы о Транссибе — путешествие от столицы до
-                  Байкала на электричках.
+                  По мотивам учебной темы о Транссибе — путешествие от столицы
+                  до Байкала на электричках.
                 </p>
               </div>
               <img
@@ -314,31 +328,48 @@
         <nav class="footer__row-content">
           <ul class="footer__links">
             <li>
-              <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/maps"
+                target="_blank"
+                >Карты</a
+              >
             </li>
             <li>
-              <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/pogoda"
+                target="_blank"
+                >Погода</a
+              >
             </li>
             <li>
-              <a class="footer__link" href="https://rasp.yandex.ru"
+              <a
+                class="footer__link"
+                href="https://rasp.yandex.ru"
+                target="_blank"
                 >Расписание</a
               >
             </li>
             <li>
-              <a class="footer__link" href="https://calendar.yandex.ru"
+              <a
+                class="footer__link"
+                href="https://calendar.yandex.ru"
+                target="_blank"
                 >Календарь</a
               >
             </li>
             <li>
-              <a class="footer__link" href="https://travel.yandex.ru"
+              <a
+                class="footer__link"
+                href="https://travel.yandex.ru"
+                target="_blank"
                 >Путешествия</a
               >
             </li>
           </ul>
         </nav>
-        <div class="footer__copyright">
-          <p class="footer__author">&copy;2023. Сергей Карасев</p>
-        </div>
+        <p class="footer__author">&copy;2023. Сергей Карасев</p>
       </footer>
     </div>
   </body>
