--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
         <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
-            По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только
-            36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут,
-            дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с
-            ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
-            Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на
-            счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера
-            Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей,
-            усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной
-            стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные
-            вашего отпуска.
+            По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+            но&nbsp;только 36% планируют провести отпуск в&nbsp;родной стране.
+            Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле,
+            Россия&nbsp;&mdash; это целая вселенная с ласковым морем юга,
+            густыми лесами Саян и&nbsp;суровыми льдами плато Путорана.
+            А&nbsp;ещё увидеть все эти красоты можно без миллионов на счету,
+            загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера
+            Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла
+            в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою
+            &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров
+            по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые
+            интересные места, достойные вашего отпуска.
           </p>
           <ul class="intro__list-container">
             <li class="intro__list">
@@ -305,7 +307,6 @@
           <a
             class="cover__link"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            target="_blank"
           >
             <div class="cover__container">
               <div class="cover__text-block">
@@ -315,12 +316,7 @@
                   до Байкала на электричках.
                 </p>
               </div>
-              <img
-              class="cover__image"
-              src="./images/cover-trains.jpg"
-              alt="Железнодорожные пути."
-              />
-            </div>  
+            </div>
           </a>
         </section>
       </main>
